# franklin-lap-counter

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Containerfile  GO_PORT_COMPLETE.md  QUICK_START.md  README.md  REDIS_SETUP.md  async_multiprocessing_bridge.py  config.json  database.py  devbox.json  driver_web_app.py  franklin-gui.py  franklin-race-recorder.py  franklin-tui.py  franklin.py  go.mod  gui_config.py  hardware_comm_process.py  hardware_comm_redis.py  hardware_monitor_gui.py  hardware_prototype.py  healthcheck_web_app.py  pyrightconfig.json  racer_colors.py  redis_commands.py  referee_web_app.py  requirements.txt  scoreboard_web_app.py  web_server.py
docs/: audio.md  redis-message-reference.md  referee-web-app-design.md
go-hardware-comm/: README.md  TUI_GUIDE.md  hardware.go  main.go  redis.go  serial.go  tui.go
playbooks/: 00-preflight.yml  10-system-packages.yml  15-franklin-user.yml  20-python-venv.yml  30-tmuxinator.yml  40-redis.yml  45-network-hotspot.yml  46-caddy-reverse-proxy.yml  50-startup-script.yml  55-autologin-startup.yml  56-wayland-sway.yml  57-hdmi-hotplug.yml  58-wayvnc.yml  59-restart-franklin-gui.yml  60-system-info.yml  61-health-check.yml  62-bounce-web-apps.yml  63-reboot.yml  64-reset-database.yml  65-hard-reset.yml  NETWORK_HOTSPOT_SETUP.md  README.md  ansible.cfg  deploy-franklin-gui.yml  deploy-franklin.yml  inventory.example.ini  site.yml
race/: contestant.py  franklin_gui_config_test.py  franklin_race_recorder_test.py  lap.py  race.py  race_contestants.py  race_end_logic.py  race_end_logic_test.py  race_end_mode_test.py  race_engine.py  race_engine_test.py  race_helpers_test.py  race_leaderboard_test.py  race_mode.py  race_snapshot.py  race_snapshot_test.py  race_state.py  redis_commands_test.py  test_race_leaderboard.py
rust/: Cargo.toml  Cross.toml
rust/franklin-hardware-monitor/: Cargo.toml
rust/franklin-hardware-monitor/src/: main.rs
rust/hardware-comm/: Cargo.toml
rust/hardware-comm/src/: main.rs
scripts/: build-deb-pure.py  build-deb.sh  build-rust-image.sh  build_deb.py  bump-version-recorder.py  bump-version.py  db_end_all_races.py  deploy-to-pi.sh  (+12 more)
(+12 files in other folders)
