[workspace]
resolver = "2"
members = [
    "franklin-hardware-monitor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jachin Rupe <jachin@jachin.rupe.name>"]

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serialport = "4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ratatui = "0.29"
crossterm = "0.28"
